--- a/index.htm
+++ b/index.htm
@@ -58,14 +58,7 @@
       <main id="main">
         <nav>
           <div id="Timerest"></div>
-          <ul class="Items">
-          <li class="one"><a href="web/salad.htm"><span>沙拉區</span></a></li>
-          <li class="two"><a href="javascript:;"><span>湯品區</span></a></li>
-          <li class="three"><a href="javascript:;"><span>炸物區</span></a></li>
-          <li class="four"><a href="javascript:;"><span>主食區</span></a></li>
-          <li class="five"><a href="javascript:;"><span>飲品區</span></a></li>
-          <li class="six"><a href="javascript:;"><span>點心區</span></a></li>
-        </ul>
+          <ul class="Items"></ul>
         </nav>
         <div class="Null"></div>
 
