--- a/index.htm
+++ b/index.htm
@@ -73,6 +73,6 @@
       
       <!--<div class="clearfix"></div>-->
     </section>
-    <script src="script/index.js?20230403"></script>
+    <script src="script/index.js?20230403" type="text/javascript"></script>
   </body>
 </html>
