--- a/web/salad.htm
+++ b/web/salad.htm
@@ -152,6 +152,6 @@
         </section>
       </main>
     </section>
-    <script src="../script/index.js?20230403"></script>
+    <script src="../script/salad.js?20230412" type="text/javascript"></script>
   </body>
 </html>
