20230416 javascript共用檔應用

--- a/index.htm
+++ b/index.htm
@@ -27,13 +27,13 @@
       <header>
         <!--項目清單ul/li
         編號清單ol/li-->
-        <li id="menu" class="menu" onclick="Menu()">美食餐廳網選單</li>
+        <li id="menu" class="menu">美食餐廳網選單</li>
         <h1><li><a href="index.htm">吃吃餐廳</a></li></h1>
         <ul class="ConnBox"></ul>
       </header>
       <nav id="PhoneMenu">
         <ul id="menuheader">
-          <li id="close" class="clearfix" onclick="PhoneMenu()"><a href="javascript:;">Ｘ</a></li>
+          <li id="close" class="clearfix"><a href="javascript:;">Ｘ</a></li>
           <h1><a href="index.htm">吃吃餐廳網</a></h1>
         </ul>
         <ul id="menunav">
@@ -73,6 +73,6 @@
       
       <!--<div class="clearfix"></div>-->
     </section>
-    <script src="script/index.js?20230403" type="text/javascript"></script>
+    <script type="module" src="script/index.js?20230403"></script>
   </body>
 </html>
