--- a/web/salad.htm
+++ b/web/salad.htm
@@ -17,12 +17,12 @@
       <header>
         <!--項目清單ul/li
         編號清單ol/li-->
-        <li id="menu" class="menu" onclick="Menu()">美食餐廳網選單</li>
+        <li id="menu" class="menu">美食餐廳網選單</li>
         <h1><li><a href="../index.htm">吃吃餐廳</a></li></h1>
       </header>
       <nav id="PhoneMenu">
         <ul id="menuheader">
-          <li id="close" class="clearfix" onclick="PhoneMenu()"><a href="javascript:;">Ｘ</a></li>
+          <li id="close" class="clearfix"><a href="javascript:;">Ｘ</a></li>
           <h1>吃吃餐廳網</h1>
         </ul>
         <ul id="menunav">
@@ -152,6 +152,6 @@
         </section>
       </main>
     </section>
-    <script src="../script/salad.js?20230412" type="text/javascript"></script>
+    <script type="module" src="../script/webs.js?20230403"></script>
   </body>
 </html>
