--- a/javascript/script.htm
+++ b/javascript/script.htm
@@ -32,10 +32,12 @@
     <ul id="Items">
         
     </ul>
+    <section id="PhoneMenu"></section>
     <!-- 伺服器上會有緩存問題，可以加上問號後面打上版本，來告訴伺服器這是同一支檔案-->
     <script src="javascript.js?20230402"></script>
     <script src="javascript02.js?20230402"></script>
     <script src="javascript03.js?20230402"></script>
     <script src="javascript04.js?20230403"></script>
+    <script src="../script/phonemenu.js"></script>
 </body>
 </html>
