--- a/javascript/script.htm
+++ b/javascript/script.htm
@@ -38,6 +38,6 @@
     <script src="javascript02.js?20230402"></script>
     <script src="javascript03.js?20230402"></script>
     <script src="javascript04.js?20230403"></script>
-    <script src="../script/phonemenu.js"></script>
+    <script type="module" src="../script/phonemenu.js"></script>
 </body>
 </html>
