--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
         <ul class="ConnBox"></ul>
       </header>
       <nav id="PhoneMenu">
-        <ul id="menuheader">
+        <!--<ul id="menuheader">
           <li id="close" class="clearfix"><a href="javascript:;">Ｘ</a></li>
           <h1><a href="index.htm">吃吃餐廳網</a></h1>
         </ul>
@@ -47,13 +47,13 @@
           </ul>
           <div class="NH"></div>
         </ul>
-        <ul id="menuicon">
+        <ul id="menuicon">-->
           <!--hr 水平線-->
           <!--<hr>-->
-          <li>line官方</li>
+          <!--<li>line官方</li>
           <li>fb粉絲頁</li>
           <li>youtube影片</li>
-        </ul>
+        </ul>-->
       </nav>
       <main id="main">
         <nav>
